Acrescentei um lorem

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, mundo</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium quis non deserunt, accusamus reprehenderit sed deleniti recusandae itaque quaerat aliquid eius asperiores quo harum officia id. Ex earum eos in.</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur a, mollitia, aliquid laboriosam quas in porro, velit fuga quae exercitationem fugiat dolor omnis at aperiam ab ex nulla ea repellendus.</p>
 </body>
 </html>
